# streetsmarts

./: .gitignore  CMakeLists.txt  README.md  mesh.vtk  run_system.sh  rundon.sh  rungpu.sh  runmesh.sh  runreg.sh
arduino/: streetsmarts.ino
arduino/streetsmarts/: streetsmarts.ino
include/: street.hpp
kitti/: kitti.py  utils.py
launch/: assets_writer_backpack_3d.launch  backpack_2d.launch  camera.launch  demo_2d.rviz  demo_3d.rviz  demo_backpack_2d.launch  demo_backpack_3d.launch  offline_backpack_2d.launch  offline_backpack_3d.launch  realsense.launch  runit.sh  ss.launch  ss.urdf  start_cam.sh  start_ss.sh
python/: accel.py  adsf.ipynb  basement.json  capture.py  capture_ply.py  diff_of_norm.ipynb  display.py  grabcut.py  join.py  just_road.avi  livingroom.json  play.py  registration.py  requirements.txt  rgbd.py  road_segments.py
python/streetsmarts/: session.py
remote/: README.md
remote/client/: client.go
remote/server/: server.go
scripts/: conf.json  offline.sh  offline_conf.json  offline_road.sh  online.sh  road_conf.json  runit.sh  trials.sh
src/: ICP.cpp  MadgwickAHRS.c  MadgwickAHRS.h  SimpleKalmanFilter.cpp  analyze.cpp  callbacks.hpp  capture.cpp  capture_frames.cpp  capture_immediate.cpp  cb.cpp  client.cpp  cluster.cpp  combine.cpp  config.cpp  config.h  display.cpp  display.h  don_seg.cpp  dump.cpp  fq.cpp  fragments.hpp  gl.cpp  gps.cpp  gps.h  gps.hpp  gps_test.cpp  gpu_seg.cpp  greedy_projection.cpp  handlers.hpp  histogram-watershed.cpp  imu.cpp  integrate.cpp  integrate.hpp  integration.cpp  kitti.cpp  load.cpp  main.cpp  make_fragments.cpp  make_road.cpp  mesh.cpp  (+41 more)
src/analyze/: cluster.cpp  don.cpp  select.cpp
src/experiments/: RGBDOdometryCuda.cpp  kitti.cpp  make_road.cpp  mesh.cpp  normals.cpp  route.cpp  segment.cpp  stuff.cpp  t265.cpp  view_pg.cpp
src/gps/: CMakeLists.txt  Session.cpp  Session.h  ntrip.cpp  ntrip.h  session.cpp  session.h
src/gui/: main.cpp
src/pose/: pose.cpp
